# docs/swagger.json
@@ -18,44 +18,6 @@
     "basePath": "/api/v1",
     "paths": {
         "/accounts": {
-            "get": {
-                "security": [
-                    {
-                        "ApiBearerKey": []
-                    }
-                ],
-                "description": "get account profile",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "accounts"
-                ],
-                "summary": "account profiles",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/api.accountResp"
-                        }
-                    },
-                    "422": {
-                        "description": "Unprocessable Entity",
-                        "schema": {
-                            "$ref": "#/definitions/api.errorResp"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/api.errorResp"
-                        }
-                    }
-                }
-            },
             "post": {
                 "description": "register an account",
                 "consumes": [
@@ -89,13 +51,13 @@
                     "422": {
                         "description": "Unprocessable Entity",
                         "schema": {
-                            "$ref": "#/definitions/api.errorResp"
+                            "$ref": "#/definitions/api.defaultJsonResp"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/api.errorResp"
+                            "$ref": "#/definitions/api.defaultJsonResp"
                         }
                     }
                 }
@@ -135,13 +97,142 @@
                     "422": {
                         "description": "Unprocessable Entity",
                         "schema": {
-                            "$ref": "#/definitions/api.errorResp"
+                            "$ref": "#/definitions/api.defaultJsonResp"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/api.errorResp"
+                            "$ref": "#/definitions/api.defaultJsonResp"
+                        }
+                    }
+                }
+            }
+        },
+        "/accounts/profile": {
+            "get": {
+                "security": [
+                    {
+                        "ApiBearerKey": []
+                    }
+                ],
+                "description": "get account profile",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "accounts"
+                ],
+                "summary": "account profiles",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.accountResp"
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "schema": {
+                            "$ref": "#/definitions/api.defaultJsonResp"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.defaultJsonResp"
+                        }
+                    }
+                }
+            }
+        },
+        "/accounts/verification": {
+            "get": {
+                "security": [
+                    {
+                        "ApiBearerKey": []
+                    }
+                ],
+                "description": "sent sms verify code",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "accounts"
+                ],
+                "summary": "sent verify code",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.defaultJsonResp"
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "schema": {
+                            "$ref": "#/definitions/api.defaultJsonResp"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.defaultJsonResp"
+                        }
+                    }
+                }
+            }
+        },
+        "/accounts/verification/{code}/code": {
+            "get": {
+                "security": [
+                    {
+                        "ApiBearerKey": []
+                    }
+                ],
+                "description": "sent sms verify code",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "accounts"
+                ],
+                "summary": "sent verify code",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "verify code",
+                        "name": "code",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.authResp"
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "schema": {
+                            "$ref": "#/definitions/api.defaultJsonResp"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.defaultJsonResp"
                         }
                     }
                 }
@@ -192,7 +283,7 @@
                 }
             }
         },
-        "api.errorResp": {
+        "api.defaultJsonResp": {
             "type": "object",
             "properties": {
                 "code": {
